<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_headline"
        android:icon="@drawable/ic_view_headline_black_24dp"
        android:title="@string/headline"
        android:enabled="true"/>

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/category" />

    <item
        android:id="@+id/navigation_source"
        android:icon="@drawable/ic_import_contacts_black_24dp"
        android:title="@string/source"
        android:enabled="true"/>
    <item
        android:id="@+id/navigation_bookmarks"
        android:icon="@drawable/ic_grade_black_24dp"
        android:title="@string/title_bookmarks" />


</menu>
